--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,8 @@ li {
   font-size: 16px;
   font-weight: 100;
   line-height: 19px;
+}
+li:first-letter {
   text-transform: capitalize;
 }
 .weather-app.wrapper {
@@ -46,7 +48,6 @@ li {
   font-weight: 400;
 }
 .weather-temperature .units {
-  position: relative;
   font-size: 16px;
   top: -34px;
 }
