--- a/src/styles.css
+++ b/src/styles.css
@@ -48,6 +48,7 @@ li:first-letter {
   font-weight: 400;
 }
 .weather-temperature .units {
+  position: relative;
   font-size: 16px;
   top: -34px;
 }
